# VRConnect

./: .env.example  .gitattributes  .gitignore  Cargo.toml  README.md  example.env
src/: lib.rs  main.rs
src/config/: loader.rs  mod.rs
src/core/: mod.rs  processor.rs
src/domain/: mod.rs  processed_data.rs  vital_data.rs
src/error/: mod.rs
src/input/: decompressor.rs  mod.rs  socketio.rs  socketio_server.rs
src/output/: ble.rs  console.rs  mod.rs
src/processor/: cleaner.rs  data_processor.rs  data_transformer.rs  mod.rs  transformer.rs
src/utils/: logger.rs  mod.rs
