[package]
name = "vrconnect"
version = "1.0.0"
edition = "2021"
authors = ["UTBM Team"]
description = "Medical middleware for real-time vital data processing"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-stream = "0.1"

# WebSocket for Socket.IO
tokio-tungstenite = "0.21"
futures-util = "0.3"

# Bluetooth Low Energy
bluer = { version = "0.17", features = ["bluetoothd"] }
uuid = "1.6"

# Data processing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flate2 = "1.0"
fancy-regex = "0.13"

# Configuration
dotenvy = "0.15"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Logging
log = { version = "0.4", features = ["std"] }

# Colors
colored = "2.1"

[dev-dependencies]
mockall = "0.12"
tempfile = "3.8"

[[bin]]
name = "vrconnect"
path = "src/main.rs"
